--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,7 +22,9 @@
               <md-card style = "max width:75%; border-radius: 10px; padding: 15px; font-size: 20px;" 
               ng-style="message.sender=='BOT' ? {'background-color': 'teal'} : {'background-color': 'grey'}">
               <span>{{message.text}}</span>
-              <span ng-bind-html="trust(message.feedResponse.description)">{{message.feedResponse.description}}</span>
+              <span ng-bind-html="trust(message.feedResponse.description)">
+                {{message.feedResponse.description}}
+              </span>
               <span style="margin-top: 4px; text-align: left; color: black ; font-size: 10px;"> {{message.time}} </span>
 
 
