--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,7 +19,7 @@
        
        
        <div ng-repeat="message in messages" layout="column" layout-align="{{message.sender=='BOT' ? 'start start' : 'start end'}}">
-              <md-card style = "max width:75%; border-radius: 10px; padding: 15px; font-size: 20px;" 
+              <md-card style = "max-width:75%; border-radius: 10px; padding: 15px; font-size: 20px;" 
               ng-style="message.sender=='BOT' ? {'background-color': 'teal'} : {'background-color': 'grey'}">
               <span>{{message.text}}</span>
               <span ng-bind-html="trust(message.feedResponse.description)">
